# mtchrs

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  lint-and-test.yml  publish.yml  python-package.yml
docs/: index.md  usage.md
mtchrs/: matchers.py
search/: search_index.json
tests/: test_matchers.py
usage/: index.html
